--- a/css/projects.css
+++ b/css/projects.css
@@ -80,5 +80,5 @@
 
 .project-links a {
     text-decoration: none;
-    color: #007bff;
+    color: black;
 }
